assets/css/style.css
/* ... */
html,
body {
    height: 100%;
    font-family: "Comfortaa", cursive;
    color: var(--black);
    line-height: 1.6;
    padding: 0;
    margin: 0;
    background-color: var(--gray-blue-light);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}
html {
    font-size: 15px;
}
body {
    font-size: 1rem;
}
body.no-scroll {
    overflow: hidden;
}
a {
    color: #caa500;
    text-decoration: none;
}
ul {
    list-style: none;
}
h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
}
p {
    margin: 0 0 10px;
}
.wrapper {
    min-height: 100%;
    overflow: hidden;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}
.main {
    background-color: var(--white);
    -webkit-box-flex: 1;
    -ms-flex: 1 0 auto;
    flex: 1 0 auto;
}
.container {
    width: 100%;
    max-width: 1200px;
    margin: 0 auto;
    padding: 0 1rem;
}
.text--center {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}
.img {
    display: block;
    max-width: 100%;
    height: auto;
}
.header {
    background-color: var(--gray-blue-light);
    padding: 1.2rem 0;
    position: relative;
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    -o-user-select: none;
    user-select: none;
}
.header.fixed {
    padding: 0.7rem 0;
    background-color: var(--blue-light);
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    z-index: 9999;
    -webkit-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    -webkit-box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
}
.header__inner {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: justify;
    -ms-flex-pack: justify;
    justify-content: space-between;
}
@media (max-width: 992px) {
    .header {
        padding: 0.5rem 0;
    }
}
@media (max-width: 576px) {
    .header.fixed {
        padding: 0.5rem 0;
    }
}
.autor {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
.autor__avatar {
    outline: none;
    width: 70px;
    height: 70px;
}
.autor__avatar-photo {
    -webkit-transition: -webkit-box-shadow 0.3s;
    transition: -webkit-box-shadow 0.3s;
    transition: box-shadow 0.3s;
    transition: box-shadow 0.3s, -webkit-box-shadow 0.3s;
    width: 70px;
    height: 70px;
    border-radius: 50%;
}
.header.fixed .autor__avatar:hover img {
    -webkit-box-shadow: 0 0 20px 0.5px var(--gray-midl-light);
    box-shadow: 0 0 20px 0.5px var(--gray-midl-light);
}
.autor__avatar:focus-visible img {
    -webkit-box-shadow: 0 0 20px 0.5px var(--blue-dark);
    box-shadow: 0 0 20px 0.5px var(--blue-dark);
}
.autor__content {
    margin-left: 0.66rem;
    line-height: 1.2;
    margin-bottom: 0;
}
.autor__names {
    color: var(--blue);
    font-weight: 700;
    font-size: 1.06rem;
    line-height: 1.2rem;
    margin-bottom: 3px;
}
.autor__prof {
    color: var(--blue);
    font-weight: 400;
    font-size: 0.8rem;
}
@media (max-width: 414px) {
    .autor__names {
        font-size: 0.7rem;
    }
    .autor__prof {
        font-size: 0.6rem;
    }
    .autor__avatar {
        width: 60px;
        height: 60px;
    }
    .autor__avatar img {
        width: 60px;
        height: 60px;
    }
}
.nav {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
}
.nav__link {
    position: relative;
    cursor: pointer;
    text-transform: uppercase;
    font-weight: 700;
    color: var(--blue);
    font-size: 0.933rem;
    margin-left: 1rem;
}
.nav__link--btn {
    border: 2px solid var(--blue);
    border-radius: 25px;
    background: none;
    font-family: inherit;
    cursor: pointer;
    padding: 0.7rem 2rem;
    -webkit-transition: color 0.2s linear, background 0.2s linear, -webkit-box-shadow 0.2s linear, -webkit-transform 0.1s linear;
    transition: color 0.2s linear, background 0.2s linear, -webkit-box-shadow 0.2s linear, -webkit-transform 0.1s linear;
    transition: color 0.2s linear, background 0.2s linear, box-shadow 0.2s linear, transform 0.1s linear;
    transition: color 0.2s linear, background 0.2s linear, box-shadow 0.2s linear, transform 0.1s linear, -webkit-box-shadow 0.2s linear, -webkit-transform 0.1s linear;
}
.nav__link--btn:hover {
    background-color: var(--blue);
    color: var(--white);
    -webkit-box-shadow: 2px 2px 10px -2px var(--black);
    box-shadow: 2px 2px 10px -2px var(--black);
}
.nav__link--btn:active {
    -webkit-transform: translateY(0.2rem);
    transform: translateY(0.2rem);
}
.nav__link--btn:focus-visible {
    background-color: var(--blue);
    color: var(--white);
    -webkit-box-shadow: 2px 2px 10px -2px var(--black);
    box-shadow: 2px 2px 10px -2px var(--black);
    border: 0.3rem solid var(--blue-medium);
}
.nav__link::after {
    content: "";
    opacity: 0;
    width: 100%;
    height: 3px;
    background-color: var(--black);
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 2;
    -webkit-transition: all 0.2s linear;
    transition: all 0.2s linear;
}
.nav__link:hover:not(.nav__link--btn)::after,
.nav__link.active:not(.nav__link--btn)::after {
    opacity: 1;
    -webkit-transform: translateY(0.33rem);
    transform: translateY(0.33rem);
}
.nav__link:focus-visible:not(.nav__link--btn)::after {
    opacity: 1;
    -webkit-transform: translateY(0.33rem);
    transform: translateY(0.33rem);
    -webkit-box-shadow: 0 5px 10px 3px var(--blue-medium);
    box-shadow: 0 5px 10px 3px var(--blue-medium);
}
/* ... */

